Feature: All backend functionalities working